# Kmeans

./: CMakeLists.txt  README.md
src/: Centroid.cpp  Centroid.h  Kmeans_MPI.cpp  Kmeans_Sequential.cpp  Mapper.cpp  Mapper.h  Point.cpp  Point.h
